0027717: Visualization - drop broken Prs3d_Drawer::ShadingAspectGlobal() flag